templates/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-nginx-nodeport-service
  namespace: develop-frontend
  labels:
    app: app1-nginx
  annotations:
    #alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
spec:
  type: NodePort
  selector:
    app: app1-nginx
  ports:
    - port: 80
      targetPort: 80
