templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test-new-frontend-nextjs
  namespace: develop-frontend
  labels:
    name: develop-frontend
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: ingress-test-frontend
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    # SSL auto certificate
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    # Redirect from HTTP to HTTPS
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # Redirect from www to non www
    alb.ingress.kubernetes.io/actions.redirect-om-to-non-www: >
      {"Type":"redirect","RedirectConfig":{"host":"om.amanonet.top","Port":"443","Protocol":"HTTPS","StatusCode":"HTTP_301"}}
    alb.ingress.kubernetes.io/actions.redirect-ar-to-non-www: >
      {"Type":"redirect","RedirectConfig":{"host":"ar.amanonet.top","Port":"443","Protocol":"HTTPS","StatusCode":"HTTP_301"}}
    alb.ingress.kubernetes.io/actions.redirect-to-non-www: >
      {"Type":"redirect","RedirectConfig":{"host":"amanonet.top","Port":"443","Protocol":"HTTPS","StatusCode":"HTTP_301"}}
    meta.helm.sh/release-name: ingress-develop
    meta.helm.sh/release-namespace: develop-frontend
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: www.om.amanonet.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redirect-om-to-non-www
                port: 
                  name: use-annotation
    - host: www.ar.amanonet.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redirect-ar-to-non-www
                port: 
                  name: use-annotation
    - host: www.amanonet.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redirect-to-non-www
                port: 
                  name: use-annotation
    - host: om.amanonet.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-nodeport-service
                port: 
                  number: 80
    - host: ar.amanonet.top
      http:
        paths:                  
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-nginx-nodeport-service
                port: 
                  number: 80
    - host: amanonet.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-nodeport-service
                port: 
                  number: 80
  tls:
  - hosts:
    - "*.amanonet.top"
    - "www.om.amanonet.top"
    - "www.ar.amanonet.top"
