templates/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test-new-frontend-nextjs-www
  namespace: develop-frontend
  labels:
    name: develop-frontend
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: ingress-test-frontend
    alb.ingress.kubernetes.io/group.order: '20'
    # Redirect from HTTP sang HTTPS, lay arn tu ACM sau khi register ten mien ingress-develop.snapdev.co
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:817333706759:certificate/279265dc-e33d-4d4c-8a31-67e647c3e249
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # Redirect from 1 domain to another domain
    #alb.ingress.kubernetes.io/actions.redirect-to-eks: >
    #  {"type":"redirect","redirectConfig":{"host":"another-ingress.snaptec.co","path":"/","port":"443","protocol":"HTTPS","query":"k=v","statusCode":"HTTP_302"}}
    # Redirect from www to non-www
    alb.ingress.kubernetes.io/actions.redirect-to-non-www: >
      {"Type":"redirect","RedirectConfig":{"host":"amanonet.top","Port":"443","Protocol":"HTTPS","StatusCode":"HTTP_302"}}
    meta.helm.sh/release-name: ingress-develop
    meta.helm.sh/release-namespace: develop-frontend
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: www.amanonet.top
    - http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: redirect-to-non-www
                port: 
                  name: use-annotation
